<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Tc2_EtherCAT_typ" Id="{8a0d58fb-d05b-000d-0f81-35995566c44c}">
    <Declaration><![CDATA[TYPE Tc2_EtherCAT_typ :
	STRUCT
		Input	: Tc2_EtherCAT_Input_typ ;
		Output	: Tc2_EtherCAT_Output_typ ;
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>