<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="Tc2_EtherCAT_FB" Id="{ba8cf9bb-381d-034e-2bd6-baee4184ace1}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK Tc2_EtherCAT_FB
VAR_INPUT

END_VAR
VAR_OUTPUT
END_VAR
VAR
	ptrTc2_EtherCAT : POINTER TO Tc2_EtherCAT_typ ;
	FB_EcCoeSdoRead_0 	: FB_EcCoeSdoRead ;
	FB_EcCoeSdoWrite_0 	: FB_EcCoeSdoWrite ;
	FB_EcSoeRead_0 		: FB_EcSoeRead ;
	FB_EcSoeWrite_0		: FB_EcSoeWrite ;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IF ptrTc2_EtherCAT^.Input.Command.EcCoeSdoRead.Enable THEN
	FB_EcCoeSdoRead_0(
					sNetId		:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoRead.sNetId, 
					nSlaveAddr	:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoRead.nSlaveAddr, 
					nSubIndex	:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoRead.nSubIndex, 
					nIndex		:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoRead.nIndex , 
					pDstBuf		:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoRead.pDstBuf, 
					cbBufLen	:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoRead.cbBufLen, 
					bExecute	:= TRUE ,
					tTimeout	:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoRead.tTimeout, 
					bBusy		=> ptrTc2_EtherCAT^.Output.Status.EcCoeSdoRead.bBusy , 
					bError		=> ptrTc2_EtherCAT^.Output.Status.EcCoeSdoRead.bError, 
					nErrId		=> ptrTc2_EtherCAT^.Output.Error.ErrorID
					);
END_IF

IF NOT 	ptrTc2_EtherCAT^.Output.Status.EcCoeSdoRead.bBusy OR ptrTc2_EtherCAT^.Output.Status.EcCoeSdoRead.bError THEN
	ptrTc2_EtherCAT^.Input.Command.EcCoeSdoRead.Enable := FALSE ;
	FB_EcCoeSdoRead_0.bExecute := FALSE ;
	ptrTc2_EtherCAT^.Output.Status.EcCoeSdoRead.bError := FALSE ;
	FB_EcCoeSdoRead_0();
END_IF

(*IF ptrTc2_EtherCAT^.Input.Command.EcCoeSdoWrite.Enable THEN
	FB_EcCoESdoWrite_0(
						sNetId		:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoWrite.sNetId, 
						nSlaveAddr	:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoWrite.nSlaveAddr, 
						nSubIndex	:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoWrite.nSubIndex, 
						nIndex		:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoWrite.nIndex, 
						pSrcBuf		:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoWrite.pSrcBuf, 
						cbBufLen	:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoWrite.cbBufLen, 
						bExecute	:= TRUE, 
						tTimeout	:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoWrite.tTimeout, 
						bBusy		=> ptrTc2_EtherCAT^.Output.Status.EcCoeSdoWrite.bBusy, 
						bError		=> ptrTc2_EtherCAT^.Output.Status.EcCoeSdoWrite.bError, 
						nErrId		=> ptrTc2_EtherCAT^.Output.Error.ErrorID
					);			
END_IF

IF NOT 	ptrTc2_EtherCAT^.Output.Status.EcCoeSdoWrite.bBusy OR ptrTc2_EtherCAT^.Output.Status.EcCoeSdoWrite.bError THEN
	ptrTc2_EtherCAT^.Input.Command.EcCoeSdoWrite.Enable := FALSE ;
	FB_EcCoESdoWrite_0.bExecute := FALSE ;
	ptrTc2_EtherCAT^.Output.Status.EcCoeSdoWrite.bError := FALSE ;
	FB_EcCoESdoWrite_0();
END_IF	*)

IF ptrTc2_EtherCAT^.Input.Command.EcSoeRead.Enable THEN
	FB_EcSoERead_0(
					sNetId		:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeRead.sNetId, 
					nSlaveAddr	:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeRead.nSlaveAddr, 
					nIdn		:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeRead.nIdn, 
					nElement	:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeRead.nElement, 
					nDriveNo	:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeRead.nDriveNo, 
					bCommand	:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeRead.bCommand, 
					pDstBuf		:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeRead.pDstBuf, 
					cbBufLen	:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeRead.cbBufLen, 
					bExecute	:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeRead.bExecute, 
					tTimeout	:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeRead.tTimeout, 
					bBusy		=> ptrTc2_EtherCAT^.Output.Status.EcSoeRead.bBusy, 
					bError		=> ptrTc2_EtherCAT^.Output.Status.EcSoeRead.bError, 
					nErrId		=> ptrTc2_EtherCAT^.Output.Error.ErrorID 
				);
END_IF

IF ptrTc2_EtherCAT^.Input.Command.EcSoeWrite.Enable THEN
	FB_EcSoEWrite_0(
					sNetId		:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeWrite.sNetId , 
					nSlaveAddr	:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeWrite.nSlaveAddr, 
					nIdn		:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeWrite.nIdn, 
					nElement	:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeWrite.nElement, 
					nDriveNo	:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeWrite.nDriveNo, 
					bCommand	:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeWrite.pCommand, 
					pSrcBuf		:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeWrite.pSrcBuf, 
					cbBufLen	:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeWrite.cbBufLen, 
					bExecute	:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeWrite.bExecute, 
					tTimeout	:= ptrTc2_EtherCAT^.Input.Parameter.EcSoeWrite.tTimeout, 
					bBusy		=> ptrTc2_EtherCAT^.Output.Status.EcSoeWrite.bBusy, 
					bError		=> ptrTc2_EtherCAT^.Output.Status.EcSoeWrite.bError, 
					nErrId		=> ptrTc2_EtherCAT^.Output.Error.ErrorID
				);
END_IF]]></ST>
    </Implementation>
    <Method Name="EcCoeSdoWrite" Id="{0cde4358-9c68-075c-235a-20f045ca0826}">
      <Declaration><![CDATA[METHOD EcCoeSdoWrite : BOOL
VAR_INPUT
END_VAR

VAR_INST
	bBusy:		BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF ptrTc2_EtherCAT^.Input.Command.EcCoeSdoWrite.Enable THEN
	FB_EcCoeSdoWrite_0(
					sNetId		:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoWrite.sNetId, 
					nSlaveAddr	:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoWrite.nSlaveAddr, 
					nSubIndex	:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoWrite.nSubIndex, 
					nIndex		:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoWrite.nIndex, 
					pSrcBuf		:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoWrite.pSrcBuf, 
					cbBufLen	:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoWrite.cbBufLen, 
					bExecute	:= TRUE, 
					tTimeout	:= ptrTc2_EtherCAT^.Input.Parameter.EcCoeSdoWrite.tTimeout, 
					bBusy		=> ptrTc2_EtherCAT^.Output.Status.EcCoeSdoWrite.bBusy, 
					bError		=> ptrTc2_EtherCAT^.Output.Status.EcCoeSdoWrite.bError, 
					nErrId		=> ptrTc2_EtherCAT^.Output.Error.ErrorID
				);			

END_IF
				
IF ptrTc2_EtherCAT^.Output.Status.EcCoeSdoWrite.bBusy THEN
	bBusy:=	TRUE;
END_IF
	
IF bBusy AND NOT ptrTc2_EtherCAT^.Output.Status.EcCoeSdoWrite.bBusy  THEN
	bBusy:=		FALSE;
	ptrTc2_EtherCAT^.Input.Command.EcCoeSdoWrite.Enable:=	FALSE;
	FB_EcCoESdoWrite_0(bExecute := FALSE);
	IF (ptrTc2_EtherCAT^.Output.Status.EcCoeSdoWrite.bError = FALSE) THEN		
		EcCoeSdoWrite:= TRUE;
	END_IF
END_IF	]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="Tc2_EtherCAT_FB">
      <LineId Id="3" Count="80" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="Tc2_EtherCAT_FB.EcCoeSdoWrite">
      <LineId Id="11" Count="13" />
      <LineId Id="75" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="70" Count="4" />
      <LineId Id="59" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>